--- a/AdvantageAndroid/Advantage/.classpath
+++ b/AdvantageAndroid/Advantage/.classpath
@@ -3,9 +3,9 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="libs/pebblekit-2.6.0-eclipse.jar"/>
 	<classpathentry kind="lib" path="libs/appcompat_v7_4.jar"/>
-	<classpathentry kind="lib" path="libs/android.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
